# back-end/src/controllers/user.controller.ts
@@ -49,8 +49,21 @@ export const blockUserController = async (req: Request, res: Response, next: Nex
 
 export const getAllUsers = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const data = await userService.listUsers()
-    return res.status(200).json({ message: MESSAGES.GET_USERS_SUCCESS, data })
+    const params = {
+      search: req.query.search as string,
+      status: req.query.status ? parseInt(req.query.status as string) : undefined,
+      sortBy: req.query.sortBy as 'fullName' | 'email' | 'createdAt' | 'updatedAt',
+      sortOrder: req.query.sortOrder ? parseInt(req.query.sortOrder as string) as 1 | -1 : undefined,
+      page: req.query.page ? parseInt(req.query.page as string) : undefined,
+      limit: req.query.limit ? parseInt(req.query.limit as string) : undefined
+    }
+    
+    const data = await userService.listUsers(params)
+    return res.status(200).json({ 
+      message: MESSAGES.GET_USERS_SUCCESS, 
+      data: data.users,
+      pagination: data.pagination
+    })
   } catch (err) {
     next(err)
   }
@@ -65,26 +78,6 @@ export const getUserDetail = async (req: Request, res: Response, next: NextFunct
   }
 }
 
-export const searchUsersController = async (req: Request, res: Response, next: NextFunction) => {
-  try {
-    const searchParams = {
-      search: req.query.search as string,
-      role: req.query.role as string,
-      status: req.query.status ? parseInt(req.query.status as string) : undefined,
-      page: req.query.page ? parseInt(req.query.page as string) : 1,
-      limit: req.query.limit ? parseInt(req.query.limit as string) : 10
-    }
-    
-    const data = await userService.searchUsers(searchParams)
-    return res.status(200).json({ 
-      message: 'Search users successful', 
-      data: data.users,
-      pagination: data.pagination
-    })
-  } catch (err) {
-    next(err)
-  }
-}
 
 export const updateUserProfileController = async (req: Request, res: Response, next: NextFunction) => {
   try {
